plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.openapi.generator' version '6.3.0'
}

group = 'com.hermanvfx'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
    implementation "org.mapstruct:mapstruct:1.5.3.Final"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Не забыть удалить
    implementation 'com.github.javafaker:javafaker:1.0.2'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.5'
    implementation 'org.springframework.security:spring-security-config:6.0.2'

    implementation 'org.springframework.security:spring-security-web:6.0.2'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
}

openApiGenerate {
    inputSpec = "$project.rootDir/src/main/resources/openapi/api-docs.yml".toString()
    outputDir = "$buildDir/generated/api" as Object
    generateModelDocumentation = true
    generatorName = "spring"
    library = "spring-boot"
    apiPackage = "com.example.userservice.controller"
    modelPackage = "com.example.userservice.dto"
    invokerPackage = "com.example.userservice.api"
    configOptions = [
            useSpringBoot3: "true",
            useTags: "true",
            java8: "false",
            dateLibrary: "java8",
            interfaceOnly: "true",
            skipDefaultInterface: "true",
            hideGenerationTimestamp: "true",
            serializableModel: "true",
            booleanGetterPrefix: "is",
            openApiNullable: "true",
    ]
}

sourceSets {
    main {
        java {
            srcDir("$buildDir/generated/api/src/main/java")
        }
    }
}


tasks.compileJava {
    dependsOn(tasks.openApiGenerate)
}
